--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        // "dev": "nodemon server.js"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
@@ -23,3 +23,4 @@
         "nodemon": "^3.1.0"
     }
 }
+
